force-app/main/default/objects/FeatureFeedback__c/FeatureFeedback__c.object-meta.xml
<CustomObject>
    <label>Feature Feedback</label>
    <nameField>
        <label>Feature Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>