force-app/main/default/objects/FeatureFeedback__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <referenceTo>Feature__c</referenceTo>
    <relationshipLabel>Feature Feedback</relationshipLabel>
    <relationshipName>FeatureFeedback</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>