force-app/main/default/objects/FeatureFeedback__c/fields/FeedbackId__c.field-meta.xml
<CustomField>
    <fullName>FeedbackId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Feedback Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>